--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dat.gui": "^0.7.9",
     "stats.js": "^0.17.0",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "three-obj-loader": "^1.1.3"
   }
 }
